# omnitrade

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ZH.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  DEVELOPMENT.md  DEVELOPMENT_ZH.md  LICENSE  README.md  README_ZH.md  SECURITY.md  SECURITY_ZH.md  TRADEMARKS.md  TRADEMARKS_ZH.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py  0002_rename_position_columns.py  0003_add_structured_reasoning_fields.py  0004_add_decision_symbol_side.py  0005_add_justification_and_correlation_id.py  0006_rename_correlation_id_to_run_id.py  0007_create_pgvector_extension.py
apps/backend/docs/: PERF_BASELINE.md
apps/backend/scripts/: check_consistency.py  sync_positions.py  verify_deepseek_tool_choice.py
apps/backend/src/omnitrade/: __init__.py  config.py  main.py
apps/backend/src/omnitrade/agents/: __init__.py  errors.py  experts_team.py  experts_team_agno.py  hitl.py  think_node.py  trading_agent.py  trading_agent_agno.py
apps/backend/src/omnitrade/api/: agent_os_app.py  container.py  deps.py
apps/backend/src/omnitrade/application/: __init__.py  account_service.py  composition.py  decision_service.py  position_manager.py  risk_service.py  signal_service.py  trading_loop.py  trading_workflow.py  trading_workflow_agno.py
apps/backend/src/omnitrade/backtest/: __init__.py  __main__.py  agno_think.py  cassette.py  cli.py  clock.py  data_source.py  engine.py  exchange.py  llm_cache.py  metrics.py
apps/backend/src/omnitrade/domain/: __init__.py  entities.py  enums.py  errors.py  protocols.py  value_objects.py
apps/backend/src/omnitrade/infrastructure/: __init__.py
apps/backend/src/omnitrade/observability/: __init__.py  log_store.py  trace_context.py  tracing.py
apps/backend/tests/: test_trace_context.py
apps/backend/tests/agents/: __init__.py  test_experts_team_retries.py  test_hitl_pause_resume.py  test_hold_distribution_under_strict_tool.py  test_strategies_acceptance3.py  test_structured_output_contract.py  test_think_node.py  test_think_node_structured_parser.py  test_think_node_tool_required.py  test_trading_agent_team_advisory.py
apps/backend/tests/agents/guardrails/: test_qa_phrase.py
apps/backend/tests/agents/knowledge/: test_trade_journal.py
apps/backend/tests/agents/prompts/: __init__.py  test_system_prompt_snapshots.py  test_think_and_reflect_prompts.py
apps/backend/tests/agents/tools/: __init__.py  test_hitl_open_threshold.py  test_market_and_account_tools.py  test_news_and_external_tools.py  test_phase_84_tools.py  test_structured_reason.py  test_structured_reason_schema.py  test_trade_execution_tools.py
apps/backend/tests/api/: conftest.py  test_agent_os_app.py  test_ip_blacklist.py  test_schedule_register.py
apps/backend/tests/api/routes/: test_account.py  test_actions.py  test_config.py  test_decisions.py  test_health.py  test_health_latency.py  test_history.py  test_logs.py  test_positions.py  test_prices.py  test_ready.py  test_rebate.py  test_runs.py  test_stats.py  test_strategy.py  test_trades.py
apps/backend/tests/api/sse/: test_sse_stream.py
apps/backend/tests/api/ws/: test_ws_stream.py
apps/backend/tests/application/: __init__.py  _fakes.py  test_composition.py  test_daily_loss_cap.py  test_pyramid_check.py  test_recent_trades_block.py  test_signal_service.py  test_trading_loop.py
apps/backend/tests/application/events/: test_bus.py
apps/backend/tests/application/monitors/: test_account_recorder_monitor.py  test_invalidation_monitor.py  test_partial_profit_monitor.py  test_price_sync_monitor.py  test_state_contract.py  test_stop_loss_monitor.py  test_trading_loop_monitor.py  test_trailing_stop_monitor.py
apps/backend/tests/application/multi_agent/: test_composition_dispatch.py  test_composition_passthrough.py  test_roster_dispatch.py  test_timeout_budget.py
apps/backend/tests/application/rebate/: test_rebate_parity.py
apps/backend/tests/application/services/: test_account_service.py  test_decision_service.py  test_position_manager.py  test_risk_service.py
apps/backend/tests/backtest/: test_cassette.py  test_engine.py
apps/backend/tests/behavioral_equivalence/: __init__.py  _cassette_synth.py  conftest.py  parity_lib.py  test_cassette_format.py  test_cassette_integrity.py  test_cassette_roundtrip.py  test_decision_characterization.py
apps/backend/tests/behavioral_equivalence/cassettes/: _smoke_roundtrip.yaml  case_01_swingsmith_trailing_L1.yaml  case_02_swingsmith_trailing_L2.yaml  case_03_swingsmith_trailing_L3.yaml  case_04_scalper_sl_high.yaml  case_05_steward_sl_mid.yaml  case_06_guardian_sl_low.yaml  case_07_raider_sl_override.yaml  case_08_scalper_partial_stage1.yaml  case_09_scalper_partial_stage2.yaml  case_10_swingsmith_partial_stage1.yaml  case_11_steward_partial_stage3.yaml  case_12_rebatehunter_partial_tight.yaml  case_13_autopilot_close_full.yaml  case_14_autopilot_close_partial.yaml  case_15_dualsignal_close.yaml  case_16_raidersquad_close.yaml  case_17_scalper_open_only.yaml  case_18_steward_open_short.yaml  case_19_guardian_hold.yaml  case_20_strider_hold.yaml  case_21_tribunal_close_half.yaml  case_22_swingsmith_trailing_edge.yaml
apps/backend/tests/domain/: test_close_path_classifier.py  test_entities.py  test_leverage_bands.py  test_protocols.py  test_protocols_conformance.py  test_rebate_calculator.py  test_three_way_state.py  test_value_objects.py
apps/backend/tests/eval/: test_accuracy_g2.py  test_reliability_cycle.py
apps/backend/tests/integration/: test_cassette_forces_rest.py  test_cassette_ws_mutual_exclusion.py  test_full_loop.py
apps/backend/tests/observability/: test_log_store.py  test_tracing.py
apps/backend/tests/scripts/: test_check_consistency.py  test_sync_positions.py
docs/: FAQ.md  (+16 more)
(+319 files in other folders)
