[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnitrade"
version = "0.1.0"
description = "OmniTrade — AI Trading Agent Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "ccxt>=4.3.0",
    "litellm>=1.40.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "sqlite-vec>=0.1.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "structlog>=24.2.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "numpy>=1.26",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "vcrpy>=6.0.0",
    "freezegun>=1.5.0",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
omnitrade = "omnitrade.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omnitrade"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
    "RUF", # ruff-specific
]
ignore = [
    "S101",    # use of assert (needed in tests)
    "ANN401",  # Any allowed in JSON parsers, dynamic dispatch, and protocol stubs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN", "C408", "RUF001", "RUF002", "RUF003"]
"alembic/**" = ["ANN", "N999"]
# FastAPI Depends(...) in defaults is the framework-idiomatic pattern.
"src/omnitrade/api/deps.py" = ["B008"]
"src/omnitrade/api/routes/**" = ["B008"]
"src/omnitrade/api/ws/**" = ["B008"]
# Prompt files carry verbatim Chinese system-prompt text; full-width CJK
# punctuation + long CJK template lines are intentional.
"src/omnitrade/agents/prompts/**" = ["E501", "RUF001", "RUF002", "RUF003"]
# Multi-agent roster: tool descriptions and user prompts embed Chinese team /
# jury role text; same CJK exemption applies as the prompt templates above.
"src/omnitrade/application/multi_agent/**" = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "litellm.*",
    "langgraph.*",
    "langchain_core.*",
    "langchain.*",
    "sqlite_vec.*",
    "apscheduler.*",
    "alembic.*",
    "vcr.*",
    "structlog.*",
    "yaml.*",
    "requests.*",
    "syrupy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["src/omnitrade"]
omit = ["*/migrations/*", "*/alembic/*"]
