[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnitrade"
version = "0.1.0"
description = "OmniTrade — AI Trading Agent Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "ccxt>=4.3.0",
    "sqlite-vec>=0.1.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "structlog>=24.2.0",
    # T4: OpenTelemetry tracing overlay. Agno ships `agno.tracing.setup_tracing`
    # which spins up a TracerProvider, attaches Agno's DatabaseSpanExporter,
    # and registers OpenInference's `AgnoInstrumentor` to emit spans for
    # agent runs / model calls / tool executions. Both deps are optional in
    # Agno (its setup falls back to a noop ImportError) so we pin them here.
    "opentelemetry-sdk>=1.27.0",
    "openinference-instrumentation-agno>=0.1.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "numpy>=1.26",
    "websockets>=12",
    "fastmcp>=2.0.0",
    "colorama>=0.4.6",
    # Agno is the only LLM / Agent / MCP-toolkit framework after Stage A
    # of the cutover (`/Users/daoyu/.claude/plans/mossy-frolicking-hickey.md`).
    # Phase 4.5 brings the `[scheduler]` extra (croniter + pytz) for the
    # AgentOS native cron scheduler.
    "agno[scheduler]>=2.0.0",
    # Agno's DeepSeek model class lazy-imports `openai` (sync + async).
    "openai>=1.40.0",
    # T10: trade-journal RAG via Agno's `Knowledge` + `PgVector`. The
    # `pgvector` Python client provides the SQLAlchemy `Vector` column
    # type Agno's PgVector vectordb uses to persist embeddings. Pinned
    # at the same minor floor as Agno's own optional extra.
    "pgvector>=0.3.0",
    # T10: local embedder for trade-journal RAG. DeepSeek's API only
    # serves chat models, so we default to fastembed (CPU-bound, no
    # external key). The OpenAI-protocol path stays available via the
    # `embedder_provider` setting for operators on a real OpenAI /
    # OpenAI-compatible aggregator.
    "fastembed>=0.4.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "vcrpy>=6.0.0",
    "freezegun>=1.5.0",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]

[project.urls]
Homepage = "https://github.com/gong1414/omnitrade"
Repository = "https://github.com/gong1414/omnitrade"
Documentation = "https://github.com/gong1414/omnitrade/tree/main/docs"
Issues = "https://github.com/gong1414/omnitrade/issues"
Changelog = "https://github.com/gong1414/omnitrade/blob/main/CHANGELOG.md"

[project.scripts]
omnitrade = "omnitrade.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omnitrade"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
    "RUF", # ruff-specific
]
ignore = [
    "S101",    # use of assert (needed in tests)
    "ANN401",  # Any allowed in JSON parsers, dynamic dispatch, and protocol stubs
]

[tool.ruff.lint.per-file-ignores]
# Test files: long fixture strings + stub classes with mutable defaults
# + intentional broad pytest.raises are all part of normal test idiom.
"tests/**" = [
    "S",         # bandit security checks (asserts, weak crypto in fixtures, …)
    "ANN",       # type annotations not required on test fns
    "C408",      # dict() literal is fine in tests
    "RUF001",    # ambiguous unicode in test strings
    "RUF002",
    "RUF003",
    "E501",      # long fixture strings (verbatim model output, justifications)
    "RUF012",    # mutable defaults in stub classes (intentional, single-test scope)
    "B017",      # broad pytest.raises is OK with a `match=` filter
    "PT011",     # ditto — broad pytest.raises is allowed in tests
]
"alembic/**" = ["ANN", "N999"]
# FastAPI Depends(...) in defaults is the framework-idiomatic pattern.
"src/omnitrade/api/deps.py" = ["B008"]
"src/omnitrade/api/routes/**" = ["B008"]
"src/omnitrade/api/ws/**" = ["B008"]
# Prompt files carry verbatim Chinese system-prompt text; full-width CJK
# punctuation + long CJK template lines are intentional.
"src/omnitrade/agents/prompts/**" = ["E501", "RUF001", "RUF002", "RUF003"]
# FastMCP tool decorators bind the symbol typevar at function scope as
# `Symbol = ...` for tooling readability; this trips N806 (variable
# should be lowercase). The current shape mirrors FastMCP's reference
# tool layout and we'd rather match upstream than fight the lint.
"src/omnitrade/infrastructure/mcp/trading_mcp_server.py" = ["N806", "E501"]
# `try / except / pass` is the correct shape for best-effort fallback
# code in the exchange and backtest layers (e.g. the contractSize
# probe, ws subscription cleanup) — the failure path is "use the
# default value", which is exactly what `pass` does. Logging would
# add noise without changing behaviour.
"src/omnitrade/infrastructure/exchange/ccxt_exchange.py" = ["S110"]
"src/omnitrade/backtest/data_source.py" = ["S110"]
# pydantic Field(description=...) lines exceed 100 chars by a few
# tokens for tools the LLM reads; splitting hurts readability.
"src/omnitrade/agents/tools/decision_schemas.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "sqlite_vec.*",
    "apscheduler.*",
    "vcr.*",
    "structlog.*",
    "fastmcp.*",
    "yaml.*",
    "requests.*",
    "agno.*",
    "psycopg.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
markers = [
    "manual_qa: opt-in tests requiring live LLM + human verification (excluded from default CI run)",
    "eval: agent-reliability evals (Agno ReliabilityEval) — runs in a dedicated CI step under tests/eval/",
    "live: cassette-gated evals that exercise a real LLM judge call — skipped when no cassette is present",
    "requires_postgres: opt-in tests needing a live Postgres + pgvector via AGNO_POSTGRES_URL (T10 trade-journal integration smoke)",
]

[tool.coverage.run]
source = ["src/omnitrade"]
omit = ["*/migrations/*", "*/alembic/*"]
